[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/thing/Entity.gd" type="Script" id=1]
[ext_resource path="res://raw_sprites/woodp.png" type="Texture" id=2]
[ext_resource path="res://scripts/dircomp.gd" type="Script" id=3]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=4]
[ext_resource path="res://raw_sprites/chain.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 34 )

[node name="Entity" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 16, 14 )
points = PoolVector2Array( 12, 19, 12, -16 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 1

[node name="ColorRect2" type="ColorRect" parent="Line2D2"]
margin_left = -47.0
margin_top = -17.0
margin_right = -41.0
margin_bottom = -16.0
color = Color( 0, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -16, 14 )
points = PoolVector2Array( -12, 19, -12, -5.29617, -12, -16 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 1

[node name="ColorRect2" type="ColorRect" parent="Line2D"]
margin_left = 41.0
margin_top = -17.0
margin_right = 47.0
margin_bottom = -16.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 50 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 50 )
shape = SubResource( 1 )
one_way_collision = true

[node name="DirComp" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 42 )
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 32

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 4 )
gravity_enabled = false
gravity_only_when_not_on_floor = false

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 22, 34 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
